responsive collapse + maj bug css

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -2,11 +2,11 @@
 .dropdown {
     display: flex;
     flex-direction: column;
-    background: rgba(255, 96, 96, 1);
     width: 90%;
     margin: 1em;
     border-radius: 5px;
     .TitlePannel {
+        background: rgba(255, 96, 96, 1);
         display: flex;
         justify-content: space-between;
         padding: 0.5em;
@@ -19,49 +19,23 @@
         height: 20px;
     }
 }
-    p {
+   .HiddenText {
+     p {
         background: rgba(246, 246, 246, 1);
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
         padding: 1.5em 1em 1em 1em;
     }
 }
-
-.chevron {
-    color: white!important;
 }
 
+// Desktop version
 @media (min-width: 769px) {
 .dropdown {
-    display: flex;
-    flex-direction: column;
-    background: rgba(255, 96, 96, 1);
     width: 75%;
-    margin: 1em;
-    border-radius: 5px;
     .TitlePannel {
-        display: flex;
-        justify-content: space-between;
         padding: 1em;
-        border-radius: 5px;
-        h3 {
-            color: white;
-        }
-    img {
-        width: 20px;
-        height: 20px;
-    }
 }
-    p {
-        background: rgba(246, 246, 246, 1);
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
-        padding: 1.5em 1em 1em 1em;
-    }
+}
 }
 
-.chevron {
-    color: white!important;
-}
 
-}
+
